# ohsl

./: .gitignore  Cargo.toml  README.md
examples/: basic_integration.rs  complex_numbers.rs  heat_equation.rs  linear_systems.rs  polynomial.rs  root_finding.rs  sparse_laplace.rs  sparse_linear_system.rs  vector_algebra.rs
src/: banded.rs  complex.rs  constant.rs  elementary.rs  lib.rs  matrix.rs  mesh1d.rs  mesh2d.rs  newton.rs  polynomial.rs  sparse.rs  sparse2.rs  sparse_matrix.rs  tridiagonal.rs  vector.rs
src/complex/: elementary.rs  hyperbolic.rs  mod.rs  trigonometric.rs
src/matrix/: arithmetic.rs  functions.rs  mod.rs  operations.rs  solve.rs
src/polynomial/: arithmetic.rs  mod.rs
src/vector/: arithmetic.rs  functions.rs  mod.rs  operations.rs  vec_cmplx.rs  vec_f64.rs
tests/: complex_tests.rs  matrix_tests.rs  mesh1d_tests.rs  mesh2d_tests.rs  newton_tests.rs  sparse_tests.rs  tests.rs  vector_tests.rs
tests/complex/: assignment_arithmetic.rs  basic_arithmetic.rs  complex.rs  elementary_functions.rs  hyperbolic_functions.rs  trig_functions.rs
tests/matrix/: arithmetic.rs  construction.rs  functions.rs  matrix.rs  operations.rs  solve.rs
tests/mesh1d/: mesh1d.rs
tests/mesh2d/: mesh2d.rs
tests/newton/: newton.rs
tests/polynomial/: polynomial.rs
tests/sparse/: banded.rs  sparse.rs  tridiagonal.rs
tests/vector/: arithmetic.rs  basic_functions.rs  complex.rs  construction.rs  norms.rs  random.rs  sequence.rs  sort.rs  vector.rs
