[package]
name = "ohsl"
version = "0.6.0"
authors = ["anthonyoneill <ajoneill@protonmail.com>"]
edition = "2018"
description = "A collection of numerical routines and mathematical types for use in scientific computing."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.1"
