[package]
name = "ohsl"
version = "0.9.0"
authors = ["anthonyoneill <ajoneill@protonmail.com>"]
edition = "2021"
description = "A collection of numerical routines and mathematical types for use in scientific computing."
license = "MIT"
repository = "https://github.com/anthonyoneill/ohsl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
more-asserts = "0.2.1"
